--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+
+.brian {
+  /* Brian's style rules here */
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+
 .App {
   text-align: center;
 }
